k8s/apps/haste-server/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: haste-server
spec:
  type: ClusterIP
  selector:
    app: haste-server
  ports:
    - name: http
      port: 80
      targetPort: 7777
