k8s/apps/haste-server/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: haste-server
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`code.litarvan.com`)
      services:
        - name: haste-server
          port: http
