k8s/apps/haste-server/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: haste-server
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
    - host: code.litarvan.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: haste-server
                port:
                  name: http
  tls:
    - hosts:
        - code.litarvan.dev
      secretName: code-tls
